# ai-meiten-finder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo_calculate_review_score.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/ai_meiten_finder/: scraper.py  sentiment_analyzer.py
tests/: test_scraper.py  test_sentiment_analyzer.py
