[project]
name = "ai-meiten-finder"
version = "0.1.0"
description = "レビューのAI感情分析による飲食店評価システム"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "requests",
  "beautifulsoup4",
  "transformers",
  "torch",
  "fugashi>=1.5.1",
  "protobuf>=6.31.1",
  "unidic-lite>=1.0.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest-mock>=3.14.1",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
